@@ -466,13 +466,11 @@ def extractGeneric(lines, path, language='C', envvars=None):
 
 	determinelicense = False
 	if scanenv.get('BAT_RANKING_LICENSE', 0) == '1':
-		## TODO: if licenses does not exist we should always set this to False
-		## c.execute("SELECT name FROM sqlite_master WHERE type='table' AND name='licenses';")
-		## if c.fetchall() != []:
-		##	determinelicense = True
-		## else:
-		##	determinelicense = False
-		determinelicense = True
+		c.execute("SELECT name FROM sqlite_master WHERE type='table' AND name='licenses';")
+		if c.fetchall() != []:
+			determinelicense = True
+		else:
+			determinelicense = False
 
 	## keep a list of versions per package we found
 	packageversions = {}
